[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/tilemap_packed.png" type="Texture" id=1]
[ext_resource path="res://Player/player.gd" type="Script" id=2]
[ext_resource path="res://Assets/light.png" type="Texture" id=3]
[ext_resource path="res://Assets/light2rigth.png" type="Texture" id=4]
[ext_resource path="res://Player/bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/light2wide.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 1 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.0
height = 2.0

[node name="Player" type="KinematicBody2D"]
light_mask = 3
script = ExtResource( 2 )
Bullet = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 12
vframes = 11
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
energy = 0.8
shadow_enabled = true

[node name="Light2D3" type="Light2D" parent="."]
light_mask = 2
z_index = 1
texture = ExtResource( 6 )
mode = 3
range_item_cull_mask = 2
shadow_enabled = true
shadow_item_cull_mask = 2

[node name="hurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
shape = SubResource( 2 )

[node name="Light2D2" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 0.1

[node name="WeaponStartPositions" type="Node2D" parent="."]

[node name="ShootPosition" type="Position2D" parent="WeaponStartPositions"]
visible = false

[node name="Sprite" type="Sprite" parent="WeaponStartPositions/ShootPosition"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurtBox_area_entered"]
